<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.zlogic.vogon</groupId>
	<artifactId>vogon</artifactId>
	<version>2.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Vogon</name>

	<organization>
		<name>Zlogic</name>
	</organization>

	<modules>
		<module>vogon-data</module>
		<module>vogon-web</module>
		<module>vogon-packaging</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.7.0</version>
					<configuration>
						<source>9</source>
						<target>9</target>
						<jdkToolchain>
							<version>9</version>
						</jdkToolchain>
						<release>9</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>1.5.7.RELEASE</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>keytool-maven-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.20.1</version>
					<configuration>
						<!-- TODO: remove this workaround? -->
						<argLine>--add-modules java.base</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.zlogic.vogon</groupId>
				<artifactId>vogon-data</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.zlogic.vogon</groupId>
				<artifactId>vogon-web</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>1.4.196</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>42.1.4</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>5.2.11.Final</version>
				<exclusions>
					<exclusion>
						<groupId>javax.el</groupId>
						<artifactId>el-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.jboss.spec.javax.transaction</groupId>
						<artifactId>jboss-transaction-api_1.2_spec</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-jpamodelgen</artifactId>
				<version>5.2.11.Final</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-entitymanager</artifactId>
				<version>5.2.11.Final</version>
				<exclusions>
					<exclusion>
						<groupId>org.jboss.spec.javax.transaction</groupId>
						<artifactId>jboss-transaction-api_1.2_spec</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>5.0.0.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>5.0.0.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-jpa</artifactId>
				<version>2.0.0.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security.oauth</groupId>
				<artifactId>spring-security-oauth2</artifactId>
				<version>2.2.0.RELEASE</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework.security</groupId>
						<artifactId>spring-security-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework.security</groupId>
						<artifactId>spring-security-config</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework.security</groupId>
						<artifactId>spring-security-web</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot</artifactId>
				<version>1.5.7.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-tomcat</artifactId>
				<version>1.5.7.RELEASE</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-data-jpa</artifactId>
				<version>1.5.7.RELEASE</version>
				<exclusions>
					<exclusion>
						<groupId>javax.transaction</groupId>
						<artifactId>javax.transaction-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-security</artifactId>
				<version>1.5.7.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-actuator</artifactId>
				<version>1.5.7.RELEASE</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.9.1</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.3.3</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>1.8.11</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>1.2</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>2.3.0</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.xml</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>2.1</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.persistence</groupId>
				<artifactId>javax.persistence-api</artifactId>
				<version>2.2</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.annotation</groupId>
				<artifactId>javax.annotation-api</artifactId>
				<version>1.3.1</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.transaction</groupId>
				<artifactId>javax.transaction-api</artifactId>
				<version>1.2</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>1.1.1</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-jasper</artifactId>
				<version>8.5.20</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>webjars-locator</artifactId>
				<version>0.32-1</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>webjars-locator-core</artifactId>
				<version>0.33</version>
			</dependency>
			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>webjars-locator-jboss-vfs</artifactId>
				<version>0.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>angular</artifactId>
				<version>1.6.6</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>angular-cookies</artifactId>
				<version>1.6.6</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>angular-route</artifactId>
				<version>1.6.6</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>jquery</artifactId>
				<version>3.2.1</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>bootstrap</artifactId>
				<version>3.3.7</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>angular-bootstrap</artifactId>
				<version>2.5.0</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>ngInfiniteScroll</artifactId>
				<version>1.3.0</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>ng-tags-input</artifactId>
				<version>3.1.1</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>d3</artifactId>
				<version>3.5.17</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>nvd3</artifactId>
				<version>1.8.5</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.bower</groupId>
				<artifactId>angular-nvd3</artifactId>
				<version>1.0.9</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>1.5.7.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>4.5.3</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
